# shadowchat

./: AGENTS.md  CHANGELOG.md  README.md
.github/workflows/: ci-android.yml  ci-ios.yml  ci-rust.yml
apps/android/: AGENTS.md  README.md  gradle.properties  settings.gradle.kts
apps/ios/: AGENTS.md  README.md
checks/browser/: smoke.spec.js
core/: README.md
core/contracts/: README.md
core/rust/: Cargo.toml  README.md
core/rust/crates/shadow_core_auth/: Cargo.toml
core/rust/crates/shadow_core_auth/src/: lib.rs
core/rust/crates/shadow_core_domain/: Cargo.toml
core/rust/crates/shadow_core_domain/src/: lib.rs
core/rust/crates/shadow_core_rooms/: Cargo.toml
core/rust/crates/shadow_core_rooms/src/: lib.rs
core/rust/crates/shadow_core_runtime/: Cargo.toml
core/rust/crates/shadow_core_runtime/src/: command.rs  dto.rs  error.rs  ffi.rs  lib.rs  runtime.rs  state.rs
core/rust/crates/shadow_core_session/: Cargo.toml
core/rust/crates/shadow_core_session/src/: lib.rs
core/rust/crates/shadow_core_timeline/: Cargo.toml
core/rust/crates/shadow_core_timeline/src/: lib.rs
docs/: README.md
docs/adr/: ADR-0001-monorepo.md  ADR-0002-rust-core.md  ADR-0003-native-ui.md  ADR-0004-auth-oidc-mas.md  ADR-0005-multi-account-safe.md  ADR-0006-bridges-security-model.md  ADR-0007-design-system-motion.md  ADR-0008-notification-extensions.md  ADR-0009-storage-separation.md  ADR-0010-observability-redaction.md  ADR-0011-calls-boundary.md  ADR-0012-feature-modules.md  ADR-0013-release-channels.md  (+1 more)
infra/: README.md
product/: README.md
tooling/: README.md
(+83 files in other folders)
